function addMoreRow almost working

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -98,7 +98,7 @@
 			  		<!--botao de pesquisa por alcool-->
 			  		
 			  		<ul class="list">
-			  			<li onclick="addItem('lista_produtos1','Água','2.00')" class="icones_bebidas">
+			  			<li onclick="addMoreRows('lista_produtos1','Água','2.00')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
 			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
@@ -108,7 +108,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Coca-Cola','1.50')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Coca-Cola','1.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="coca-cola.png" id="img_menu"/></td>
@@ -118,7 +118,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Ice Tea','1.50')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Ice Tea','1.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="ice_tea.png" id="img_menu"/></td>
@@ -128,7 +128,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Café','1.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Café','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="cafe.png" id="img_menu"/></td>
@@ -138,7 +138,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Absinto','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Absinto','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="absinto.png" id="img_menu"/></td>
@@ -148,7 +148,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vodka Laranja','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vodka Laranja','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
@@ -158,7 +158,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vodka Limão','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vodka Limão','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
@@ -168,7 +168,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vodka Cola','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vodka Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
@@ -178,7 +178,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Rum','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Rum','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="rum.png" id="img_menu"/></td>
@@ -188,7 +188,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Somersby de Maçã','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Somersby de Maçã','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="somersby_m.png" id="img_menu"/></td>
@@ -198,7 +198,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Somersby Frutos Vermelhos','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Somersby Frutos Vermelhos','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="somersby_f.png" id="img_menu"/></td>
@@ -208,7 +208,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Tequila','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Tequila','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="tequila.png" id="img_menu"/></td>
@@ -218,7 +218,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Whisky','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Whisky','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="whisky.png" id="img_menu"/></td>
@@ -228,7 +228,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Whisky Cola','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Whisky Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="whisky_cola.png" id="img_menu"/></td>
@@ -238,7 +238,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vinho Branco','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vinho Branco','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vinho_branco.png" id="img_menu"/></td>
@@ -248,7 +248,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vinho Tinto','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vinho Tinto','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vinho_tinto.png" id="img_menu"/></td>
@@ -273,7 +273,7 @@
 			  		</button>
 			  		
 			  		<ul class="list">
-			  			<li onclick="addItem('lista_produtos1','Hamburger','6.00')" class="icones_bebidas">
+			  			<li onclick="addMoreRows('lista_produtos1','Hamburger','6.00')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
 			  						<td id="td_img"><img src="sem_queijo.png" id="img_menu"/></td>
@@ -283,7 +283,7 @@
 						  	</table>
 		  					<p class="description_1">Pão, carne de vaca, alface e tomate</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Cheeseburger','6.50')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Cheeseburger','6.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="com_queijo.png" id="img_menu"/></td>
@@ -293,7 +293,7 @@
 						  	</table>
 				  			<p class="description">Pão, carne de vaca, queijo, alface e tomate</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Cachorro Quente','4.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Cachorro Quente','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="cachorro.png" id="img_menu"/></td>
@@ -303,7 +303,7 @@
 						  	</table>
 						  	<p class="description_1">Pão, salsicha e batata frita</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Bifana','4.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Bifana','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="bifana.png" id="img_menu"/></td>
@@ -313,7 +313,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de porco</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Torradas','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Torradas','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="torradas.png" id="img_menu"/></td>
@@ -323,7 +323,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com manteiga</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Prego no Pão','4.00')" class="icones_bebidas">
+				  		<li onclick="aaddMoreRows('lista_produtos1','Prego no Pão','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="prego.png" id="img_menu"/></td>
@@ -333,7 +333,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de vaca</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Amendoins','1.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Amendoins','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="amendoins.png" id="img_menu"/></td>
@@ -342,7 +342,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Tremoços','1.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Tremoços','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="tremoços.png" id="img_menu"/></td>
