menu and historico working, but need to improve historico

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -89,13 +89,6 @@
 			  			Procurar por preço
 			  		</button>
 
-			  		<!--botao de pesquisa por alcool-->
-			  		<label class="switch">
-						<input class="switch-input" type="checkbox" />
-						<span class="switch-label" data-on="c/ alcool" data-off="s/ alcool" data-sort="type" onclick="Search('bebidas')"></span> 
-						<span class="switch-handle" data-filter="type" onclick="Search('bebidas')"></span> 
-					</label>
-			  		<!--botao de pesquisa por alcool-->
 			  		
 			  		<ul class="list">
 			  			<li onclick="addMoreRows('lista_produtos1','Água','2.00')" class="icones_bebidas">
@@ -118,7 +111,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Ice Tea','1.50')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Ice-Tea','1.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="ice_tea.png" id="img_menu"/></td>
@@ -148,7 +141,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka Laranja','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Laranja','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
@@ -158,7 +151,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka Limão','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Limão','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
@@ -168,7 +161,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka Cola','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
@@ -188,7 +181,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Somersby de Maçã','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Somersby_de_Maçã','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="somersby_m.png" id="img_menu"/></td>
@@ -198,7 +191,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Somersby Frutos Vermelhos','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Somersby_Frutos_Vermelhos','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="somersby_f.png" id="img_menu"/></td>
@@ -228,7 +221,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Whisky Cola','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Whisky_Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="whisky_cola.png" id="img_menu"/></td>
@@ -238,7 +231,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vinho Branco','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vinho_Branco','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vinho_branco.png" id="img_menu"/></td>
@@ -248,7 +241,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vinho Tinto','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Vinho_Tinto','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="vinho_tinto.png" id="img_menu"/></td>
@@ -293,7 +286,7 @@
 						  	</table>
 				  			<p class="description">Pão, carne de vaca, queijo, alface e tomate</p>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Cachorro Quente','4.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Cachorro_Quente','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="cachorro.png" id="img_menu"/></td>
@@ -323,7 +316,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com manteiga</p>
 				  		</li>
-				  		<li onclick="aaddMoreRows('lista_produtos1','Prego no Pão','4.00')" class="icones_bebidas">
+				  		<li onclick="aaddMoreRows('lista_produtos1','Prego_no_Pão','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="prego.png" id="img_menu"/></td>
@@ -351,7 +344,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Lays Originais','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Lays_Originais','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="lays.png" id="img_menu"/></td>
@@ -360,7 +353,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Tiras de Milho', '2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Tiras_de_Milho', '2.00')" class="icones_bebidas">
 				  			<table>
 				  				<tr>
 				  					<td id="td_img"><img src="tiras.png" id="img_menu"/></td>
