list.js now local, fix refresh bug of total value, redirect to historico and minus button added

--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -73,17 +73,17 @@
           <th style="width: 65%">Artigos</th>		
           <th style="width: 20%">Preço</th>
         </tr>
-      </table>
+      <!--</table>
     </div>
     <div id="tabela10">
-      <table id="historicotab1" align="center">
+      <table id="historicotab1" align="center">-->
         
       </table>
     </div>
     <!--fim tabela historico-->
     <p id="historico_par" onclick="listAllItems()">Total:</p>
 
-    <p onclick="AddTableRow()">aqui</p>
+    
 
     <!--inicio da barra de musica no inferior-->
     <div id="rodape">
