--- a/Projeto/pagamento.html
+++ b/Projeto/pagamento.html
@@ -6,9 +6,10 @@
   		<link rel="stylesheet" href="stylesheet.css" type="text/css"/> <!--redireciona para o documento com o css-->
   		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--<adapt the page to the dispositive-->
   		<meta charset="UTF-8">
+      <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
 
   	</head>
-  	<body onload="end()">
+  	<body>
 
 
   		<div class="icones" id="pay">
@@ -21,9 +22,7 @@
   		<p id="frase1"> Aguarde pelo empregado. </p>
  		<!--<p id="frase1"> Aguarde pelo empregado.</p>-->
  		<p id="frase2"> Obrigado pela visita! Esperamos que tenha gostado. </p>
- 		<p id="frase3"> Até à próxima! </p>
-
- 		<a href="index.html"><button class="icones" style="text-align: right;">Clique para iniciar</button></a>
+  
 
   </body>
  </html>
