add lesss one item function, improve javascript code

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -338,7 +338,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com manteiga</p>
 				  		</li>
-				  		<li onclick="aaddMoreRows('lista_produtos1','Prego_no_Pão','4.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Prego_no_Pão','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
