--- a/Projeto/musica.html
+++ b/Projeto/musica.html
@@ -69,203 +69,183 @@
   	</div>
   	<!--fim da barra fixa-->
 
-  		<table style="position: absolute;width: 100%;"> <!--estes styles se calhar sao precisos tirar noos vossos pc-->
+  		<!--fim da barra fixa-->
+  	<table style="position: absolute;width: 100%;"> <!--estes styles se calhar sao precisos tirar noos vossos pc-->
   		<tr>
   			<td style="width: 30%;">
 		  		<table id="submenu">
 		  			<tr>
-		  				<td><div class="icones_menu" id="bib" onclick="changeDiv('Biblioteca de músicas','Playlist')">Biblioteca de músicas</div></td>
+		  				<td><div class="icones_menu" id="beb" onclick="changeDiv('bebidas','comida')">Biblioteca de músicas</div></td>
 		  			</tr>
 		  			<tr>
-		  				<td><div class="icones_menu" id="play" onclick="changeDiv('Playlist','Biblioteca de músicas')">Playlist</div></td>
+		  				<td><div class="icones_menu" id="com" onclick="changeDiv('comida','bebidas')">Playlist</div></td>
 		  			</tr>
 		  		</table>
 			</td>
 			<td>
-				<div id="Biblioteca de músicas">
-			  		<input class="search" placeholder="Search" onclick="Search('Biblioteca de músicas')" />
-			  		<button class="sort" data-sort="name" onclick="Search('Biblioteca de músicas')">
-			  			Ordenar por nome
-			  		</button>
-			  		<button class="sort" data-sort="price" onclick="Search('Biblioteca de músicas')">
-			  			Ordenar por preço
+				<div id="bebidas">
+			  		<input class="search" placeholder="Search" onclick="Search('bebidas')" />
+			  		<button class="sort" data-sort="name" onclick="Search('bebidas')">
+			  			Pesquisar por musica
 			  		</button>
 
 			  		
 			  		<ul class="list">
-			  			<li onclick="addMoreRows('lista_produtos1','7 Years','Lukas Graham')" class="icones_bebidas">
+			  			<li onclick="" class="icones_bebidas">
 			  				<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
 						  			<td class="name">7 Years</td>
 						  			<td class="artist">Lukas Graham</td>
-						  			<td class="type">Soul</td>
 						  			<td class="time">4:00</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Coca-Cola','1.50')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-						  			<td class="name">Hey Brother</td>
-						  			<td class="artist">Avicii</td>
-						  			<td class="type">Electro</td>
+			  						<td class="name">Makeup</td>
+						  			<td class="artist">AGIR</td>
+						  			<td class="time">4:00</td>
+						  	</table>
+				  		</li>
+				  		<li onclick="" class="icones_bebidas">
+				  			<table>
+			  					<tr>
+			  						<td id="add"><img src="add.png"/></td>
+			  						<td class="name">Faded</td>
+						  			<td class="artist">Alan Walker</td>
+						  			<td class="time">3:33</td>
+						  		</tr>
+						  	</table>
+				  		</li>
+				  		<li onclick="" class="icones_bebidas">
+				  			<table>
+			  					<tr>
+			  						<td id="add"><img src="add.png"/></td>
+						  			<td class="name">Amnesia</td>
+						  			<td class="artist">5 Seconds of Summer</td>
+						  			<td class="time">4:12</td>
+						  		</tr>
+						  	</table>
+				  		</li>
+				  		<li onclick="" class="icones_bebidas">
+				  			<table>
+			  					<tr>
+			  						<td id="add"><img src="add.png"/></td>
+						  			<td class="name">Lonely</td>
+						  			<td class="artist">Akon</td>
 						  			<td class="time">4:24</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Ice-Tea','1.50')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="ice_tea.png" id="img_menu"/></td>
-						  			<td class="name">Ice Tea</td>
-						  			<td class="type">Sem alcool</td>
-						  			<td class="price">1.50€</td>
+			  						<td class="name">That's How You Know</td>
+						  			<td class="artist">Nico & Vinz</td>
+						  			<td class="time">4:04</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Café','1.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="cafe.png" id="img_menu"/></td>
-						  			<td class="name">Café</td>
-						  			<td class="type">Sem alcool</td>
-						  			<td class="price">1.00€</td>
+			  						<td class="name">Hollow</td>
+						  			<td class="artist">Tory Kelly</td>
+						  			<td class="time">3:40</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Absinto','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="absinto.png" id="img_menu"/></td>
-						  			<td class="name">Absinto</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+			  						<td class="name">Rock Botom</td>
+						  			<td class="artist">Hailee Steinfeld</td>
+						  			<td class="time">3:37</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Laranja','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
-						  			<td class="name">Vodka Laranja</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+			  						<td class="name">We Belong Together</td>
+						  			<td class="artist">Mariah Carey</td>
+						  			<td class="time">3:25</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Limão','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
-						  			<td class="name">Vodka Limão</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+			  						<td class="name">Take On Me</td>
+						  			<td class="artist">a-ha</td>
+						  			<td class="time">3:48</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vodka_Cola','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
-						  			<td class="name">Vodka Cola</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+						  			<td class="name">She Will Be Loved</td>
+						  			<td class="artist">Maroon 5</td>
+						  			<td class="time">4:27</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Rum','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="rum.png" id="img_menu"/></td>
-						  			<td class="name">Rum</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+			  						<td class="name">Thousand Miles</td>
+						  			<td class="artist">Vanessa Carlton</td>
+						  			<td class="time">4:29</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Somersby_de_Maçã','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="somersby_m.png" id="img_menu"/></td>
-						  			<td class="name">Somersby de Maçã</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+			  						<td class="name">The Scientist</td>
+						  			<td class="artist">Coldplay</td>
+						  			<td class="time">4:25</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Somersby_Frutos_Vermelhos','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="somersby_f.png" id="img_menu"/></td>
-						  			<td class="name">Somersby Frutos Vermelhos</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+			  						<td class="name">Big Girls Don't Cry</td>
+						  			<td class="artist">Fergie</td>
+						  			<td class="time">5:06</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Tequila','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="tequila.png" id="img_menu"/></td>
-						  			<td class="name">Tequila</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
-						  		</tr>
+			  						<td class="name">Just The Way You Are</td>
+						  			<td class="artist">Bruno Mars</td>
+						  			<td class="time">4:02</td>
 						  	</table>
 				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Whisky','2.00')" class="icones_bebidas">
+				  		<li onclick="" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="whisky.png" id="img_menu"/></td>
-						  			<td class="name">Whisky</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
-						  		</tr>
-						  	</table>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Whisky_Cola','2.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="whisky_cola.png" id="img_menu"/></td>
-						  			<td class="name">Whisky Cola</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
-						  		</tr>
-						  	</table>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vinho_Branco','2.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="vinho_branco.png" id="img_menu"/></td>
-						  			<td class="name">Vinho Branco</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
-						  		</tr>
-						  	</table>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Vinho_Tinto','2.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="vinho_tinto.png" id="img_menu"/></td>
-						  			<td class="name">Vinho Tinto</td>
-						  			<td class="type">Com alcool</td>
-						  			<td class="price">2.00€</td>
+			  						<td class="name">Animals</td>
+						  			<td class="artist">Martin Garrix</td>
+						  			<td class="time">3:12</td>
 						  		</tr>
 						  	</table>
 				  		</li>
@@ -274,127 +254,28 @@
 			  	</div>
 			</td>
 			<td>
-				<div id="Playlist"> 
-			  		<input class="search" placeholder="Search" onclick="Search('Playlist')" /> <!--escrever para procurar-->
-			  		<button class="sort" data-sort="name" onclick="Search('Playlist')"> <!--procurar por ordem alfabetica-->
-			  			Ordenar por nome
+				<div id="comida"> 
+			  		<input class="search" placeholder="Search" onclick="Search('comida')" /> <!--escrever para procurar-->
+			  		<button class="sort" data-sort="name" onclick="Search('comida')"> <!--procurar por ordem alfabetica-->
+			  			Pesquisar por música
 			  		</button>
-			  		<button class="sort" data-sort="price" onclick="Search('Playlist')">  <!--procurar por preço-->
-			  			Ordenar por preço
-			  		</button>
-			  		
-			  		<ul class="list">
-			  			<li onclick="addMoreRows('lista_produtos1','Hamburger','6.00')" class="icones_bebidas">
-			  				<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="sem_queijo.png" id="img_menu"/></td>
-						  			<td class="name">Hamburger</td>
-						  			<td class="price">6.00€</td>
-						  		</tr>
-						  	</table>
-		  					<p class="description_1">Pão, carne de vaca, alface e tomate</p>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Cheeseburger','6.50')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="com_queijo.png" id="img_menu"/></td>
-						  			<td class="name">Cheeseburger</td>
-						  			<td class="price">6.50€</td>
-						  		</tr>
-						  	</table>
-				  			<p class="description">Pão, carne de vaca, queijo, alface e tomate</p>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Cachorro_Quente','4.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="cachorro.png" id="img_menu"/></td>
-						  			<td class="name">Cachorro Quente</td>
-						  			<td class="price">4.00€</td>
-						  		</tr>
-						  	</table>
-						  	<p class="description_1">Pão, salsicha e batata frita</p>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Bifana','4.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="bifana.png" id="img_menu"/></td>
-						  			<td class="name">Bifana</td>
-						  			<td class="price">4.00€</td>
-						  		</tr>
-						  	</table>
-						  	<p class="description_1">Pão com carne de porco</p>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Torradas','2.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="torradas.png" id="img_menu"/></td>
-						  			<td class="name">Torradas</td>
-						  			<td class="price">2.00€</td>
-						  		</tr>
-						  	</table>
-						  	<p class="description_1">Pão com manteiga</p>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Prego_no_Pão','4.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="prego.png" id="img_menu"/></td>
-						  			<td class="name">Prego no Pão</td>
-						  			<td class="price">4.00€</td>
-						  		</tr>
-						  	</table>
-						  	<p class="description_1">Pão com carne de vaca</p>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Amendoins','1.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="amendoins.png" id="img_menu"/></td>
-						  			<td class="name">Amendoins</td>
-						  			<td class="price">1.00€</td>
-						  		</tr>
-						  	</table>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Tremoços','1.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="tremoços.png" id="img_menu"/></td>
-						  			<td class="name">Tremoços</td>
-						  			<td class="price">1.00€</td>
-						  		</tr>
-						  	</table>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Lays_Originais','2.00')" class="icones_bebidas">
-				  			<table>
-			  					<tr>
-			  						<td id="add"><img src="add.png"/></td>
-			  						<td id="td_img"><img src="lays.png" id="img_menu"/></td>
-						  			<td class="name">Batatas Lays Originais</td>
-						  			<td class="price">2.00€</td>
-						  		</tr>
-						  	</table>
-				  		</li>
-				  		<li onclick="addMoreRows('lista_produtos1','Tiras_de_Milho', '2.00')" class="icones_bebidas">
-				  			<table>
-				  				<tr>
-				  					<td id="add"><img src="add.png"/></td>
-				  					<td id="td_img"><img src="tiras.png" id="img_menu"/></td>
-						  			<td class="name">Tiras de Milho</td>
-						  			<td class="price">2.00€</td>
-						  		</tr>
-						  	</table>
-				  		</li>
-			  		</ul>
-			  	</div>
-			</td>	
+			</td>
 	  	</tr>
     </table>
+
+  	<!--inicio da barra de musica no inferior-->
+  	<div id="rodape">
+  		<img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
+  		<table id="rodape_tab">
+  			<tr>
+  				<td id="coluna_img"><img src="coluna.png"></td>
+		  		<td><div class="rod_elementos" id="rod_musica">Música 1</div></td>
+		  		<td><div class="rod_elementos" id="rod_artista">Artista 1</div></td>
+		  		<td><div class="rod_elementos" id="rod_tempo">Tempo 1</div></td>
+		  	</tr>
+		</table>
+  	</div>
+  	<!--fim da barra de musica no inferior-->
 
   </body>
  </html>
