add music function partially implemented, fix header hover bug

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -30,8 +30,8 @@
 		    	</table>	
 		  	</div>
 		<!--</a>-->
-  	  	<a href="menu.html">
-	  	  	<div class="icones" id="menu" style="border-color: #006df0;">
+  	  	<!--<a href="menu.html">-->
+	  	  	<div class="icones" id="menu" style="border-color: #006df0;" onclick="changePage('menu')">
 		  	  		<table  class="header_table">
 				  		<tr>
 				  			<td><img class = "imagem_icone" src="menu.png"/></td>
@@ -41,7 +41,7 @@
 			    		</tr>	
 			    	</table>
 		  	</div>
-		</a>
+		<!--</a>-->
 		<!--<a href="musica.html">-->
 		  	<div class="icones" id="musica" onclick="changePage('musica')">
 		  		<table  class="header_table">
