--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
   <title>IIPM - Grupo 6</title>
   <link rel="shortcut icon" href="img/topLogo.png" type="image/x-png"/> <!--insere um icon no topo do separador-->
   <link rel="stylesheet" href="stylesheet.css" type="text/css"/> <!--redireciona para o documento com o css-->
+  <meta charset="UTF-8">
   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--<adapt the page to the dispositive-->
 
 
