--- a/Projeto/musica.html
+++ b/Projeto/musica.html
@@ -272,7 +272,7 @@
 
   	<!--inicio da barra de musica no inferior-->
   	<div id="rodape">
-  		<img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
+  		<img id="reticencias" onclick="toggleFooter('rodape');songPlaying()" src="ellipsis.png">
   		<table id="rodape_tab">
   			<tr>
   				<td id="coluna_img"><img src="coluna.png"></td>
