musica fully working, add song playing simbol, add timer

--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -8,9 +8,10 @@
   <meta charset="UTF-8">
 
   <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
+  <script src="jquery.js">></script> 
 
   </head>
-  <body onload=" seeProd(); seeHist()">
+  <body onload=" seeProd(); seeHist();seeTime()">
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
