--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -9,9 +9,10 @@
 
 
   <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
+  <script src="jquery.js">></script> 
 
   </head>
-  <body>
+  <body onload="seeTime()">
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
