--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -14,7 +14,7 @@
   <script src="jquery.js">></script> 
 
   </head>
-  <body onload="refresh()">
+  <body onload="refresh();seeTime()">
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
