--- a/Projeto/pagamento.html
+++ b/Projeto/pagamento.html
@@ -9,7 +9,7 @@
       <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
 
   	</head>
-  	<body>
+  	<body onload="end()">
 
 
   		<div class="icones" id="pay">
