--- a/Projeto/ajuda.html
+++ b/Projeto/ajuda.html
@@ -14,7 +14,7 @@
   <script src="jquery.js">></script> 
 
   </head>
-  <body>
+  <body onload="seeTime()">
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
