add all prototype versions

--- a/website/index.html
+++ b/website/index.html
@@ -124,8 +124,8 @@
 <a href="pdf/pbf.pdf">PBF (Não disponível)</a> <br />
 <a href="prototipo funcional 1 beta/index.html">Primeiro prot&oacute;tipo funcional</a> <br />
 <a href="prototipo funcional 1 completo/index.html">Primeiro prot&oacute;tipo funcional completo</a> <br />
-<a href="protFuncional2-beta.html">Segundo prot&oacute;tipo funcional</a> <br />
-<a href="protFuncional2-completo.html">Segundo prot&oacute;tipo funcional completo</a><br />
+<a href="prototipo funcional 2 beta/index.html">Segundo prot&oacute;tipo funcional</a> <br />
+<a href="prototipo funcional 2 completo/index.html">Segundo prot&oacute;tipo funcional completo</a><br />
 <a href="protFinal-beta.html">Prot&oacute;tipo Final</a> <br />
 <a href="protFinal-completo.html">Prot&oacute;tipo Final completo</a><br />
 </div>
